# slambook2

./: README.md
ch2/: helloSLAM.cpp  libHelloSLAM.cpp
ch3/: CMakeLists.txt
ch3/examples/: CMakeLists.txt  plotTrajectory.cpp
ch3/useEigen/: CMakeLists.txt  eigenMatrix.cpp
ch3/useGeometry/: eigenGeometry.cpp
ch3/visualizeGeometry/: CMakeLists.txt
ch4/: CMakeLists.txt  useSophus.cpp
ch4/example/: CMakeLists.txt
ch5/: CMakeLists.txt
ch5/imageBasics/: CMakeLists.txt
ch5/stereo/: stereoVision.cpp
笔记文件/: ch2.md
